--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,7 +100,7 @@
                     android:textColor="@color/text_blue"/>
 
                 <!-- profile icon -->
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/img_profile"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
